<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill" >

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/button_attach_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attach_photo" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_layout"
        android:hint="@string/editText_subject_hint"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/editText_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ad_banner"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_subject"
        android:ems="10"
        android:hint="@string/editText_note_hint"
        android:inputType="textMultiLine|textCapSentences" >
    </EditText>

    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:refreshInterval="60"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_id" >
    </com.google.ads.AdView>

</RelativeLayout>