<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/button_attach_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/attach_photo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ad_banner"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_layout" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editText_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:hint="@string/editText_subject_hint"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/editText_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_subject"
                android:ems="10"
                android:hint="@string/editText_note_hint"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="15" >
            </EditText>

            <LinearLayout
                android:id="@+id/color_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_note"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical" >

                    <com.larswerkman.colorpicker.ColorPicker
                        android:id="@+id/titlePicker"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/colorTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-thin"
                        android:text="Title Color"
                        android:textSize="26sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/stripeLayout"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="vertical" >

                    <com.larswerkman.colorpicker.ColorPicker
                        android:id="@+id/stripePicker"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:id="@+id/colorStripe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-thin"
                        android:text="Stripe Color"
                        android:textSize="26sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:refreshInterval="60"
        app:adSize="BANNER"
        app:adUnitId="@string/admob_id" >
    </com.google.ads.AdView>

</RelativeLayout>